[package]
name = "pgtest_sqlx"
version = "0.1.0"
authors = ["King Luo <home_king@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version="0.2", features=["postgres"]}
async-std = { version = "1.4.0", features = [ "attributes" ] }
